# realtime-edge-detection

./: .gitignore  ASSESSMENT_COMPLIANCE.md  DOCS_INDEX.md  README.md  TROUBLESHOOTING.md  project_structure.txt  settings.gradle
.github/workflows/: android-ci.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/realtime/: FullscreenQuad.kt
app/src/main/res/layout/: activity_main.xml
web/: README.md  index.html  integration.md  package.json  tsconfig.json
web/src/: main.ts
